# graphix

./: CMakeLists.txt  README.md
documentation/: .gitignore  CMakeLists.txt  doxy.config.in
graphix/: .clang-format  CMakeLists.txt  graphix.pc.in
graphix/public/: graphix.h
graphix/public/gfx/: application.h  application.hpp  camera.h  camera.hpp  drawable.h  drawable.hpp  dual-quaternion-helper.h  dual-quaternion-helper.hpp  glall.h  glall.hpp  graphix.h  graphix.hpp  key.h  key.hpp  matrix-helpers.h  matrix-helpers.hpp  mesh.h  mesh.hpp  movement.h  movement.hpp  node.h  node.hpp  primitive-type.hpp  primitive_type.h  scene.h  scene.hpp  shader.h  shader.hpp  vertex-array.hpp  vertex_array.h  volumetric.h  window.h  window.hpp
graphix/src/: application.cpp  application.hpp  application_impl.cpp  application_impl.hpp  assimp-helpers.cpp  assimp-helpers.h  assimp-helpers.hpp  camera-impl.hpp  camera.cpp  camera_impl.h  convert_meshes.cpp  convert_meshes.h  dependent.h  dependent.hpp  error.hpp  exception.h  exception.hpp  graphix.cpp  mesh-impl.hpp  mesh.cpp  mesh_impl.h  message.cpp  message.hpp  movement-impl.cpp  movement-impl.hpp  movement.cpp  movement_impl.cpp  movement_impl.h  node.cpp  node.h  scene-impl.cpp  scene-impl.hpp  scene.cpp  scene_impl.cpp  scene_impl.h  shader-impl.hpp  shader-program.hpp  shader.cpp  shader_impl.h  shader_program.h  (+16 more)
unit-testing/: CMakeLists.txt
unit-testing/src/: application.h  application.hpp  unit_testing_app.cpp  window.h  window.hpp
unit_testing/: CMakeLists.txt
unit_testing/src/: unit_testing_app.cpp  window.h  window_caption_width_height.h
